Fixed z-index problem with menu

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -32,6 +32,7 @@ html, body {
   padding-top: 0;
   padding-bottom: 0;
   border-bottom: solid white 5px;
+  z-index: 1;
 }
 
 #desktop-menu ul {
@@ -229,6 +230,10 @@ html, body {
   width: 100%;
 }
 
+.column {
+  z-index: 0;
+}
+
 .feature-block {
   background-color: #eee;
   margin: 0 -2em;
@@ -270,6 +275,7 @@ html, body {
   position: relative;
   margin: 0 -2em;
   color: #fff;
+  z-index: 0;
 }
 
 .black {
